style: scrollbar border redius fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,8 @@
   }
    
   ::-webkit-scrollbar-thumb {
-    background: rgba(90, 90, 90,0.5)
+    background: rgba(90, 90, 90,0.5);
+    border-radius: 3px ;
   }
   
   ::-webkit-scrollbar-thumb:hover {
